# roptimus-prime

./: .gitignore  .gitmodules  README.md  bpopt.py  bpropt.py  et --hard ID  main.py  optimos.py  optimos.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release-pypi.yml
data_structures/: ResourceInfo.py  RosterInfo.py  RosterManager.py  concurrency_info.py  constraints.py  event_log_info.py  iteration_info.py  nsga2_problem.py  pools_info.py  priority_queue.py  simulation_info.py  solution_json_output.py  solution_space.py  timetable.py
input_files/bpmn_simod_models/: BPI_Challenge_2017_W_Two_TS_filtered.bpmn  ConsultaDataMining201618.bpmn  PurchasingExample.bpmn  insurance.bpmn
input_files/temp_files/: CopiedModel.bpmn
new_version/: main.py
new_version/update_1/: tests.py
old_version/: bpropt.py
original_jsons/: sim_json.json
pareto_algorithms_and_metrics/: alg_genetic_nsga2.py  alg_hill_climb_tabu_search.py  demo_stats.txt  hill_climb.py  iterations_handler.py  main.py  pareto_metrics.py
support_modules/: bpmn_parser.py  constraints_generator.py  file_manager.py  json_manager.py  key_generator.py  log_parser.py  plot_statistics_handler.py  prosimos_simulation_runner.py  simulation_runner.py  test_parallel.py
test_assets/: Credit Application Simulation_diff.bpmn  credit_application_diff.json  demo_filtered_opt.json  log_demo_filtered_opt.xes
tests/: test_resource_info.py  test_roster_info.py
update_1/: ResourceInfo.py  RosterInfo.py  RosterManager.py  constraints.json  helpers.py  out.json  roster_info.py  tests.py  update_1.py
(+322 files in other folders)
